# consult-ops

./: .gitignore  README.md  docker-compose.yml
.gitub/workflows/: ci.yml
backend/: Cargo.toml  Dockerfile  app.db
backend/.sqlx/: query-dbf05ef01be643c0dfe195e3a69dcb6e8eebcc4602d136ee37db5301fa66bc51.json
backend/db/: consult_ops.db  schema.sql
backend/src/: auth.rs  controllers.rs  db.rs  lib.rs  main.rs  models.rs  routes.rs  seed_demo.rs  utils.rs
backend/src/handlers/: client.rs  contract.rs  invoice.rs  mod.rs  payment.rs  project.rs
backend/src/models/: client.rs  contract.rs  invoice.rs  mod.rs  payment.rs  project.rs
backend/tests/: backend_tests.rs
frontend/: .eslintrc.json  nuxt.config.ts  package.json  tsconfig.json
frontend/.output/: nitro.json
frontend/.output/public/_nuxt/: BFFAWKXo.js  CH0PuIn2.js  CW2bcp41.js  D4uBjiWr.js  DdXlzSAn.js  Dg0lyFOg.js  DvNeGn1d.js  default.Bg7SqrMd.css  demo-dashboard.DTxrcldO.css  index.CR9Dm_lt.css  (+1 more)
frontend/.output/server/: package.json
frontend/.storybook/: main.ts  preview.ts
frontend/components/: Card.vue  ContractCard.vue  InvoiceCard.vue  KPITile.vue  LoginForm.stories.ts  LoginForm.vue  ProjectCard.vue
frontend/composables/: useTheme.ts
frontend/layouts/: default.vue
frontend/pages/: demo-dashboard.vue  index.vue  operations-dashboard.vue
frontend/plugins/: axios-story-mock.ts  axios.ts
frontend/router/: index.ts
frontend/stores/: auth.ts
frontend/views/Auth/: AdminLogin.vue  ClientLogin.vue  ConsultantLogin.vue
scripts/: pre-commit.sh  reset-db.sh
(+4 files in other folders)
