[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
actix-cors = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
argon2 = "0.5"
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-native-tls", "macros"] }
dotenv = "0.15.0"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "9"
pdfium-render = "0.9"
async-stripe = { version = "1.0.0-rc.3", features = ["default"] }
tokio = { version = "1", features = ["full"] }
rand_core = "0.10.0"
rand = "0.8"

[env]
SQLX_OFFLINE = "true"
DATABASE_URL = "sqlite://./db/consult_ops.db"

[lib]
name = "backend"
path = "src/lib.rs"